# hello

./: .editorconfig  .pre-commit-config.yaml  LICENSE  pyproject.toml
.bluecopier/: state.yml
.devcontainer/: devcontainer.json
.github/workflows/: mypy.yml  pre-commit.yml  pytest.yml
src/app/: __version__.py  main.py  test_main.py
